Fix header responsiveness on small devices

--- a/static/styles/_all.scss
+++ b/static/styles/_all.scss
@@ -28,6 +28,7 @@ body {
     padding: 39px 0;
 
     .logo {
+      padding-right: 10px;
       img {
         height: 44px;
         filter: drop-shadow(0px 0px 3.85px rgba(0,0,0,0.2));
@@ -36,7 +37,8 @@ body {
 
     .top-menu {
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
+      flex-wrap: wrap;
 
       .menu-links {
         height: $header-height;
